fixed dark mode style for todoschedu;e

--- a/app/src/app/schedule2/schedule2.component.css
+++ b/app/src/app/schedule2/schedule2.component.css
@@ -1,4 +1,4 @@
-h1 {
+h2 {
   font-size: 32pt;
   margin-top: 12px;
   margin-bottom: 12px;
